syntax = "proto3";

package fspb;

option go_package = "cloudborad/internal/fs/fspb";

import "google/protobuf/timestamp.proto";

message SubInfo {
    string name = 1;
    bool is_dir = 2;
    google.protobuf.Timestamp mod_time = 3;
    int64 size = 4;
    string hash = 5;
    
}

message FileInfo {
    string file_name = 1;
    string hash = 2;
    string base_path = 3;
    int64 size = 4;
    bool is_dir = 5;
    google.protobuf.Timestamp mod_time = 6;
    repeated SubInfo dir_info = 7;
}
